adding html and css files and directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>Hong Joon Chew</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/resume">Resume</a></li>
+        <li><a href="/projects">Student Projects</a></li>
+    </ul>
+</nav>
+    <div class = "container">
+    <div class = "blurb">
     <h1> Hong Joon Chew</h1>
-    <p> I go by Joon to make things easier for most people. Currently a student in San Jose State University.<br></p>
+    <p> I go by Joon to make things easier for most people. Currently a student in San Jose State University.</p>
+    </div></div>
+<footer>
+    <ul>
+        <li><a href="mailto:hongjoon.chew@gmail.com">email me!</a></li>
+        <li><a href="GitHub Repo">github.com/hongjoonchew</a></li>
+    </ul>
+</footer>
 </body>
 </html>
