--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hong Joon Chew</title>
-    <link rel="stylesheet" href=css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
 <nav>
@@ -16,12 +16,14 @@
     <div class = "container">
     <div class = "blurb">
     <h1> Hong Joon Chew</h1>
-    <p> I go by Joon to make things easier for most people. Currently a student in San Jose State University.</p>
+    <p> I ask people to call me Joon. <br>
+        I'm graduating in December 2018 with a BS in Software Engineering.</p>
+        <p>Pursuing interests in development things such as full-stack or back-end development, and also machine learning on the side (it's my senior project!)</p>
     </div></div>
 <footer>
     <ul>
         <li><a href="mailto:hongjoon.chew@gmail.com">email me!</a></li>
-        <li><a href="GitHub Repo">github.com/hongjoonchew</a></li>
+        <li><a href="github.com/hongjoonchew">GitHub Repo (hongjoonchew)</a></li>
     </ul>
 </footer>
 </body>
