--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/resume">Resume</a></li>
+        <li><a href="/resume/Resume%20-%20hongjoonchew.pdf">Resume</a></li>
         <li><a href="/projects">Student Projects</a></li>
     </ul>
 </nav>
