Trying to put an embedded PDF reader

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <footer>
     <ul>
         <li><a href="mailto:hongjoon.chew@gmail.com">email me!</a></li>
-        <li><a href="github.com/hongjoonchew">GitHub Repo (hongjoonchew)</a></li>
+        <li><a href="http://github.com/hongjoonchew">GitHub Repo (hongjoonchew)</a></li>
     </ul>
 </footer>
 </body>
