--- a/resume/index.html
+++ b/resume/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Hong Joon Chew - Resume</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-<p>Boilerplate Resume link</p>
+<object data="/resume/Resume%20-%20hongjoonchew.pdf" type="application/pdf" height="100%" width="100%">
+    <p><b>Fallback</b>: Seems like your browser couldn't read the pdf. Here's an alternate link. <a href="https://github.com/hongjoonchew/hongjoonchew.github.io/blob/master/resume/Resume%20-%20hongjoonchew.pdf">Download PDF</a>.</p>
+</object>
 
 </body>
 </html>
