--- a/index.html
+++ b/index.html
@@ -6,25 +6,15 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/resume/Resume%20-%20hongjoonchew.pdf">Resume</a></li>
-        <li><a href="/projects">Student Projects</a></li>
-    </ul>
-</nav>
+    {% include header.html %}
     <div class = "container">
     <div class = "blurb">
     <h1> Hong Joon Chew</h1>
     <p> I ask people to call me Joon. <br>
         I'm graduating in December 2018 with a BS in Software Engineering.</p>
         <p>Pursuing interests in development things such as full-stack or back-end development, and also machine learning on the side (it's my senior project!)</p>
+        <p> <a href="/resume/Resume%20-%20hongjoonchew.pdf">Resume</a></p>
     </div></div>
-<footer>
-    <ul>
-        <li><a href="mailto:hongjoon.chew@gmail.com">email me!</a></li>
-        <li><a href="http://github.com/hongjoonchew">GitHub Repo (hongjoonchew)</a></li>
-    </ul>
-</footer>
+    {% include footer.html %}
 </body>
 </html>
