--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class = "container">
     <div class = "blurb">
     <p> I ask people to call me Joon. <br>
-        I'm graduating in December 2018 with a BS in Software Engineering.</p>
+        I work at a company called Proofpoint as a Software Engineer II, working on Deliverability 
+        I graduated from San Jose State University (Fall 2018) with a BS in Software Engineering.</p>
         <p>Pursuing interests in development things such as full-stack or back-end development, and also machine learning on the side (it's my senior project!)</p>
         <p> <a href="/resume/Resume%20-%20hongjoonchew.pdf">Resume</a></p>
     </div></div>
